<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="248dp"
        android:layout_height="497dp"
        android:orientation="horizontal"
        android:translationX="160dp"
        android:translationY="100dp">

        <ImageView
            android:id="@+id/imageRocket"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/rocketDescription"
            android:rotation="21"
            android:rotationX="8"
            android:rotationY="-50"
            app:srcCompat="@drawable/rocket" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="160dp"
        android:layout_height="300dp"
        android:orientation="vertical"
        android:translationY="150dp">

        <Button
            android:id="@+id/buttonStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonStart"
            android:textColor="@color/black"
            app:backgroundTint="@color/design_default_color_error" />

        <Button
            android:id="@+id/buttonSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonSettings"
            android:textColor="@color/black"
            app:backgroundTint="@color/design_default_color_error" />

        <Button
            android:id="@+id/buttonExit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonExit"
            android:textColor="@color/black"
            app:backgroundTint="@color/design_default_color_error" />
    </LinearLayout>

    <TextView
        android:id="@+id/textAppName"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/text"
        android:textSize="90sp"
        android:textStyle="bold" />

</RelativeLayout>