<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".Game">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textAppName4"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:fontFamily="casual"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/text"
            android:textSize="90sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dollar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:fontFamily="casual"
                android:gravity="center"
                android:text="@string/dollar"
                android:textColor="@color/text"
                android:textSize="34sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/balance"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:fontFamily="casual"
                android:gravity="start|center_vertical"
                android:text="@string/balance"
                android:textColor="@color/text"
                android:textSize="34sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/koeficient"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="casual"
                android:gravity="center_vertical|end"
                android:paddingRight="10dp"
                android:text="@string/koef"
                android:textColor="@color/greenText"
                android:textSize="34sp"
                android:textStyle="bold" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:contentDescription="@string/graphicDescription"
                app:srcCompat="@drawable/grafik" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="178dp"
                android:contentDescription="@string/rocketDescription"
                android:rotation="55"
                app:srcCompat="@drawable/rocket" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonStopOnKoef"
                android:layout_width="370dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:text="@string/buttonStartWithStop"
                android:textColor="@color/black"
                app:backgroundTint="@color/design_default_color_error"
                app:iconTint="@color/black" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:textColorHint="@color/black"
                app:boxBackgroundColor="@color/design_default_color_error"
                app:boxStrokeColor="@color/black"
                app:hintTextColor="@color/black"
                app:startIconTint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputTextKof"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/hintTextKoef"
                    android:textColor="@color/white"
                    android:textColorHint="@color/text"></com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonStartGame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:text="@string/buttonGame"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:backgroundTint="@color/design_default_color_error" />

            <Button
                android:id="@+id/buttonStop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:text="@string/buttonStop"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:backgroundTint="@color/design_default_color_error" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:textColorHint="@color/black"
                app:boxBackgroundColor="@color/design_default_color_error"
                app:boxStrokeColor="@color/black"
                app:endIconTint="@color/black"
                app:hintTextColor="@color/black"
                app:startIconTint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputSum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hintTextSum" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textForGamer"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="5dp"
                android:text="@string/textOfProgression"
                android:textColor="@color/text"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>